set minimum width to 1280px to avoid navigation wrapping

--- a/ckanext/ordbasetheme/public/css/base.scss
+++ b/ckanext/ordbasetheme/public/css/base.scss
@@ -23,14 +23,13 @@ body {
   -webkit-text-size-adjust: 100%; /* 2 */
   background: none;
   font-size: 16px;
-  min-width: 1024px;
+  min-width: 1280px;
 }
 
 .container {
   width: 100%;
   max-width: 80%;
   margin: 0 auto;
-  padding: 0 30px;
 }
 
 .container .primary {
